package com.example.media.plugin;

public interface Plugin {
    String name();
}
